<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second_color"
    android:padding="10dp"
    tools:context=".start.onboard.Onboard4Activity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:layout_marginBottom="30dp"
        android:src="@drawable/onbaord_four"
        />


    <ImageView
        android:id="@+id/back_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back"
        android:layout_margin="10dp"
        app:tint="@color/white" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:text="@string/how_we_create_account"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:text="@string/onbaord4_content"
            android:textColor="@color/black"
            />


        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/continues"
            android:textColor="@color/white"
            />


    </LinearLayout>

</RelativeLayout>