<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second_color"
    android:padding="20dp"
    tools:context=".start.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/login_content"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_background"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_google"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/poppins_bold"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:text="@string/login_with_google"
                android:textColor="@color/app_color"
                />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:text="Your Email"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/edit_background"
            android:layout_marginTop="5dp"
            android:hint="Enter Email"
            android:textSize="12sp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:fontFamily="@font/poppins"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:text="Password"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/edit_background"
            android:layout_marginTop="5dp"
            android:hint="Enter Password"
            android:textSize="12sp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:paddingEnd="10dp"
            android:drawableTint="@color/second_color"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/forgot_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:text="forgot password?"
            android:textColor="@color/app_color"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/poppins_bold"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:text="Don't have an account?"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/signup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                android:layout_marginLeft="5dp"
                android:text="Sign Up"
                android:textColor="@color/app_color"
                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>